Fixed minor keyboard handler bug
git-svn-id: https://hockeyboard.svn.sourceforge.net/svnroot/hockeyboard@5 4cf78214-6c29-4fb8-b038-d2ccc4421ee9

--- a/vc7/HockeyBoard.vcproj
+++ b/vc7/HockeyBoard.vcproj
@@ -84,8 +84,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				ShowProgress="0"
-				OutputFile="$(OutDir)/GLHockeyBoard.exe"
-				Version="2.3.3"
+				OutputFile="$(OutDir)/HockeyBoard.exe"
+				Version="2.4.0"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="C:\cairo_new\lib"
 				IgnoreAllDefaultLibraries="FALSE"
