Penalty timers rewritten
git-svn-id: https://hockeyboard.svn.sourceforge.net/svnroot/hockeyboard@6 4cf78214-6c29-4fb8-b038-d2ccc4421ee9

--- a/vc7/HockeyBoard.vcproj
+++ b/vc7/HockeyBoard.vcproj
@@ -140,6 +140,9 @@
 				RelativePath="..\src\HockeyData.cpp">
 			</File>
 			<File
+				RelativePath="..\src\HockeyData_2.cpp">
+			</File>
+			<File
 				RelativePath="..\src\HockeyDraw.cpp">
 			</File>
 			<File
