settings file (still needs testing)
git-svn-id: https://hockeyboard.svn.sourceforge.net/svnroot/hockeyboard@12 4cf78214-6c29-4fb8-b038-d2ccc4421ee9

--- a/vc7/HockeyBoard.vcproj
+++ b/vc7/HockeyBoard.vcproj
@@ -175,6 +175,9 @@
 			<File
 				RelativePath="..\src\serialsync.cpp">
 			</File>
+			<File
+				RelativePath="..\src\settings.cpp">
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
