--- a/vc7/HockeyBoard.vcproj
+++ b/vc7/HockeyBoard.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="C:\cairo_new\include"
+				AdditionalIncludeDirectories="C:\cairo4\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -34,7 +34,7 @@
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)/HockeyBoard.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="C:\cairo_new\lib"
+				AdditionalLibraryDirectories="C:\cairo4\lib"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/HockeyBoard.pdb"
 				SubSystem="1"
@@ -72,7 +72,7 @@
 				GlobalOptimizations="TRUE"
 				FavorSizeOrSpeed="1"
 				OptimizeForProcessor="3"
-				AdditionalIncludeDirectories="C:\cairo_new\include"
+				AdditionalIncludeDirectories="C:\cairo4\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="4"
 				UsePrecompiledHeader="0"
@@ -85,9 +85,9 @@
 				Name="VCLinkerTool"
 				ShowProgress="0"
 				OutputFile="$(OutDir)/HockeyBoard.exe"
-				Version="3.0.3"
+				Version="3.0.6"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="C:\cairo_new\lib"
+				AdditionalLibraryDirectories="C:\cairo4\lib"
 				IgnoreAllDefaultLibraries="FALSE"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="TRUE"
@@ -125,7 +125,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="C:\cairo_new\include"
+				AdditionalIncludeDirectories="C:\cairo4\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;LAX"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -140,7 +140,7 @@
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)/LacrosseBoard.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="C:\cairo_new\lib"
+				AdditionalLibraryDirectories="C:\cairo4\lib"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/HockeyBoard.pdb"
 				SubSystem="1"
@@ -178,7 +178,7 @@
 				GlobalOptimizations="TRUE"
 				FavorSizeOrSpeed="1"
 				OptimizeForProcessor="3"
-				AdditionalIncludeDirectories="C:\cairo_new\include"
+				AdditionalIncludeDirectories="C:\cairo4\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;LAX"
 				RuntimeLibrary="4"
 				UsePrecompiledHeader="0"
@@ -191,9 +191,9 @@
 				Name="VCLinkerTool"
 				ShowProgress="0"
 				OutputFile="$(OutDir)/LacrosseBoard.exe"
-				Version="3.0.3"
+				Version="3.0.6"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="C:\cairo_new\lib"
+				AdditionalLibraryDirectories="C:\cairo4\lib"
 				IgnoreAllDefaultLibraries="FALSE"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="TRUE"
